fixed overflow of projects column title This fixes that titles of project columns can overflow and push the action menu out of the card, so that interaction is no longer possible.
Addition to the cherry pick:
In v7.0, `min-width: 0` is additionally applied to the title of the
project column, as this is missing for the .ui.label in contrast to v8.0.

Fixes #3717

(cherry picked from commit 853f0051809aa4b8a3fec4c16e2871a3bb716c83)

--- a/web_src/css/features/projects.css
+++ b/web_src/css/features/projects.css
@@ -37,6 +37,16 @@
   line-height: 1.25 !important;
   color: inherit !important;
   cursor: inherit;
+  min-width: 0;
+}
+
+.project-column-title-label {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.project-column-header > .dropdown {
+  flex-shrink: 0;
 }
 
 .project-column > .cards {
